--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Task.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
