--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Data\Model\Task.cs" />
     <Compile Include="Data\Model\TimeTable.cs" />
     <Compile Include="Data\Model\WeeklyDateTimeBlock.cs" />
+    <Compile Include="Forms\AddScheduleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddScheduleForm.Designer.cs">
+      <DependentUpon>AddScheduleForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
