--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Data\Model\Task.cs" />
     <Compile Include="Data\Model\TimeTable.cs" />
     <Compile Include="Data\Model\WeeklyDateTimeBlock.cs" />
+    <Compile Include="Data\Repository\IScheduleRepository.cs" />
+    <Compile Include="Data\Repository\ITaskRepository.cs" />
+    <Compile Include="Data\Repository\ITimeTableRepository.cs" />
     <Compile Include="Forms\AddScheduleForm.cs">
       <SubType>Form</SubType>
     </Compile>
