--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Data\Model\AssignedSchedule.cs" />
     <Compile Include="Data\Model\AssignedTask.cs" />
     <Compile Include="Data\Model\DateTimeBlock.cs" />
+    <Compile Include="Data\Model\ITimeTable.cs" />
     <Compile Include="Data\Model\RegularSchedule.cs" />
     <Compile Include="Data\Model\Schedule.cs" />
     <Compile Include="Data\Model\SingleSchedule.cs" />
