--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Data\Manager\IScheduleManager.cs" />
     <Compile Include="Data\Manager\ITaskManager.cs" />
     <Compile Include="Data\Manager\ITimeTableManager.cs" />
+    <Compile Include="Data\Manager\ScheduleManager.cs" />
     <Compile Include="Data\Model\AssignedSchedule.cs" />
     <Compile Include="Data\Model\AssignedTask.cs" />
     <Compile Include="Data\Model\DateTimeBlock.cs" />
