--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Data\Manager\ITimeTableManager.cs" />
     <Compile Include="Data\Manager\ScheduleManager.cs" />
     <Compile Include="Data\Manager\TaskManager.cs" />
+    <Compile Include="Data\Manager\TimeTableManager.cs" />
     <Compile Include="Data\Model\AssignedSchedule.cs" />
     <Compile Include="Data\Model\AssignedTask.cs" />
     <Compile Include="Data\Model\DateTimeBlock.cs" />
