--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -107,6 +107,9 @@
     <EmbeddedResource Include="Controls\WeeklyTimeTableControl.resx">
       <DependentUpon>WeeklyTimeTableControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
