refactor: rename to `GetDayOfWeekIndex()`

--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Data\Repository\ITaskRepository.cs" />
     <Compile Include="Data\Repository\ITimeTableRepository.cs" />
     <Compile Include="Extensions\DateTimeExtension.cs" />
+    <Compile Include="Extensions\DayOfWeekExtension.cs" />
     <Compile Include="Forms\AddScheduleForm.cs">
       <SubType>Form</SubType>
     </Compile>
