test: `GetAvailableTimesInBlock에서_하루에_대한_부분_가용시간을_가져올_수_있다()`

--- a/TimeManagerUnitTests/TimeManagerUnitTests.csproj
+++ b/TimeManagerUnitTests/TimeManagerUnitTests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Model\TimeTableWorkAndAvailableTimesUnitTests.cs" />
     <Compile Include="Scheduler\ThunderSchedulerStrategyUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
