feat: 같은 일정이나 업무끼리 색상을 바꿈(색이 겹치면 다른 색으로 함)

--- a/TimeManager/TimeManager.csproj
+++ b/TimeManager/TimeManager.csproj
@@ -192,5 +192,8 @@
   <ItemGroup>
     <None Include="Resources\reload %282%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\KakaoTalk_20240619_231730081.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
